# md_c_server

./: .gitignore  CMakeLists.txt  README.md  readme_for_gemini.md  run.sh  stop.sh
src/: cache.c  cache.h  http_helpers.c  http_helpers.h  routes.h  routes_index.c  routes_index.h  routes_post.c  routes_post.h  server.c  utils.c  utils.h
templates/: index.html  post.html
